@@ -84,6 +84,7 @@ dict_mem_table_free(
 {
 	ut_ad(table);
 	ut_ad(table->magic_n == DICT_TABLE_MAGIC_N);
+	ut_d(table->cached = FALSE);
 
 	mutex_free(&(table->autoinc_mutex));
 	mem_heap_free(table->heap);
